# MyTinyWebServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
resources/: error.html  index.html  login.html  register.html  welcome.html
src/: buffer.cpp  buffer.h  epoller.cpp  epoller.h  httpconn.cpp  httpconn.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  main.cpp  opt.h  sqlconnRAII.cpp  sqlconnRAII.h  threadpool.h  timer.cpp  timer.h  webserver.cpp  webserver.h
test/: webbench
